Added a new update settings route with everything needed for it (including tests)
