# be/src/entities/user/route.ts
@@ -10,7 +10,8 @@ const {
   readUser,
   updateUser,
   deleteUser,
-  reactivateUser
+  reactivateUser,
+  updateUserSettings
 } = Controller;
 
 /**********************************************************************************/
@@ -21,4 +22,5 @@ export default Router()
   .get('/users/:userId', json({ limit: '2kb' }), readUser)
   .patch('/users/:userId', json({ limit: '16kb' }), updateUser)
   .delete('/users/:userId', json({ limit: '2kb' }), deleteUser)
-  .patch('/users/reactivate/:userId', json({ limit: '2kb' }), reactivateUser);
+  .patch('/users/reactivate/:userId', json({ limit: '2kb' }), reactivateUser)
+  .patch('/users/settings/:userId', json({ limit: '4kb' }), updateUserSettings);
